// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input matches snapshot: enzyme.mount 1`] = `
<glamorous(input)
  type="text"
>
  <input
    className="css-opcxs3"
    type="text"
  />
</glamorous(input)>
`;

exports[`Input matches snapshot: enzyme.render 1`] = `
<input
  class="css-opcxs3"
  type="text"
/>
`;

exports[`Input matches snapshot: enzyme.shallow 1`] = `
<input
  className="css-opcxs3"
  type="text"
/>
`;
